@startuml
interface ObseverDeCapteurAsync {
+ Future update(c: Capteur)
}
interface Java.Future {
}
interface Java.MethodInvocation {
}
class Java.Scheduler {
}
class Canal {
+ Future update(c: Capteur)
}
class Afficheur {
}
class CapteurImpl {
}
class Update {
+ void call()
}
interface ObserverDeCapteur {
}



ObserverDeCapteur <|.. Afficheur
ObseverDeCapteurAsync -- CapteurImpl
ObseverDeCapteurAsync <|.. Canal
Java.MethodInvocation <|.. Update

note "update: Active Object" as N1
Canal <.. N1 : Proxy
Afficheur <.. N1 : ConcretServant
ObserverDeCapteur <.. N1 : Servant
ObseverDeCapteurAsync <.. N1 : Service
Java.Future <.. N1 : Future
Java.MethodInvocation <.. N1 : MI
Java.Scheduler <.. N1 : Scheduler
CapteurImpl <.. N1 : Client
Update <.. N1 : ConcreteMI

@enduml